Update expected time

--- a/long_term/survey.qmd
+++ b/long_term/survey.qmd
@@ -46,7 +46,7 @@ Thank you for taking the time to participate in this survey. We are collecting d
 
 **PARTICIPATION:** You must be 18 or over to participate. You will be asked a series of questions about your experience following the DaSEH course you previously took. You can stop participating in the survey at any point. You do not need to answer optional questions. 
 
-Depending on how you answer the survey, this will take **~10 minutes** to complete. You will have an opportunity before submission to edit your responses. Any answers that are ultimately submitted (and not removed by the participant) will continue to be used for research.
+Depending on how you answer the survey, this will take **2-4 minutes** to complete. You will have an opportunity before submission to edit your responses. Any answers that are ultimately submitted (and not removed by the participant) will continue to be used for research.
 
 **RISK:** Risk of participation is minimal. The questions we ask pose minimal security risk to participants as they focus on your personal experience and expectations. While we have taken measures to ensure the security of the survey responses, please be aware that no online system is completely secure. By participating in this survey, you understand and accept the inherent risks associated with transmitting information over the internet.
 
